# deliberate-api

./: .env.example  .gitignore  Dockerfile  README.md  engine.py  fly.toml  main.py  models.py  openrouter.py  prompts.py  pyproject.toml
mcp-server/: README.md  pyproject.toml  server.py
static/: index.html
