[project]
name = "deliberate-mcp"
version = "0.1.0"
description = "MCP server for Deliberate API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
deliberate-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
